methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return (true)
            ^MethodsReturning:3: warning: enclosing method VuBiscuit has result type Unit: return value discarded
    return (true)
    ^MethodsReturning:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return (false)
            ^MethodsReturning:5: warning: enclosing method VuBiscuit has result type Unit: return value discarded
    return (false)
    ^MethodsReturning:13: error: type mismatch;
 found   : Unit
 required: Boolean
      if (VuBiscuit()){
                   ^MethodsReturning:18: error: Boolean does not take parameters
      return biscuit()
                    ^MethodsReturning:11: error: type mismatch;
 found   : Unit
 required: Boolean
    for (n<- 1 to 6){
          ^