methods.returning.MethodsReturning.scala.code
def VuBiscuit(){
  if (estSurBiscuit()==true){
    return (true)
  }else{
    return (false)
  }
}
def haveBaggle():Boolean = {
  var biscuit:Boolean=false
  var n =0
    for (n<- 1 to 6){
      avance()
    	if (VuBiscuit()){
        biscuit=true
      }
    for (n<- 1 to 6){
      recule()}
      return biscuit()
  }

}